--- a/.github/workflows/gistscript_trolling.yml
+++ b/.github/workflows/gistscript_trolling.yml
@@ -26,4 +26,4 @@ jobs:
         run: cd $GITHUB_WORKSPACE && python -m pip install -r requirements.txt
       
       - name: Do some trolling
-        run: cd $GITHUB_WORKSPACE && python main.py
+        run: cd $GITHUB_WORKSPACE && python main.py --oneoff
