--- a/.github/workflows/gistscript_trolling.yml
+++ b/.github/workflows/gistscript_trolling.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
       - name: Do some trolling
-        run: cd $GITHUB_WORKSPACE && python main.py --oneoff
+        run: cd $GITHUB_WORKSPACE && python main.py --oneoff --debug
